Agregado el contenido de angel, errores presentes en el diseno.

--- a/css/style-register.css
+++ b/css/style-register.css
@@ -1,15 +1,22 @@
-body {
-    margin:0;
-}
 
-
-header .container {
+.container-fluid, col-6 {
     display: flex;
     justify-content: space-between;
 }
 
+main .col-10, .col-sm-8, .col-lg-4, .offset-1, .offset-sm-2, .offset-lg-4{
+    align-content: center;
+    border-radius: 29px 29px 29px 29px;
+    -moz-border-radius: 29px 29px 29px 29px;
+    -webkit-border-radius: 29px 29px 29px 29px;
+    border: 2px solid #E2DEDE;
+    -webkit-box-shadow: 6px 8px 5px 2px rgba(179,179,179,1);
+    -moz-box-shadow: 6px 8px 5px 2px rgba(179,179,179,1);
+    box-shadow: 6px 8px 5px 2px rgba(179,179,179,1);
+    
+}
 
-header #uac, #fdi{
-    height: 10%;
-    width: 10%;
+
+main .card-img-top{
+    margin-top: 20px;
 }
