--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,62 +1,73 @@
-html, body {
-  height: 100%;
-   
+body{
+  background: #475d62 url(../image/star-sky.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;  
-    background-color: rgb(159, 157, 157);
-}
-
-body .col-10, .col-sm-5, .col-lg-4, .col-xl-3{
+.login-dark form {
+    max-width: 320px;
+    width: 90%;
+    background-color: #1e2833;
     padding: 40px;
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    box-shadow: 3px 3px 4px rgba(0,0,0,0.2);
 }
 
-.form-signin {
-    width: 95%;
-    max-width: 330px;
-    margin: auto;
-    background-color: #BBB9B9;
-    border-radius: 36px;
-    -webkit-box-shadow: 7px 7px 63px -31px rgba(250,240,250,1);
-    -moz-box-shadow: 7px 7px 63px -31px rgba(250,240,250,1);
-    box-shadow: 7px 7px 63px -31px rgba(250,240,250,1);
+.login-dark .illustration {
+    text-align: center;
+    padding: 15px 0 20px;
+    font-size: 100px;
+    color: #2980ef;
 }
 
-.text-center{
-     background-color: rgba(70, 70, 70, .6);
-}
-.form-signin .checkbox {
-    font-weight: 400;
-}
-.form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
+.login-dark form .form-control {
+    background: none;
+    border: none;
+    border-bottom: 1px solid #434a52;
+    border-radius: 0;
+    box-shadow: none;
+    outline: none;
+    color: inherit;
 }
 
-.form-signin .form-control:focus {
-    z-index: 2;
+.login-dark form .btn-primary {
+    background: #214a80;
+    border: none;
+    border-radius: 4px;
+    padding: 11px;
+    box-shadow: none;
+    margin-top: 26px;
+    text-shadow: none;
+    outline: none;
 }
 
-.form-signin button[type = "submit"]{
-    background-color: #D5CFCF;
-    border-color: #878282; 
-    color: #000000;
-    border-radius: 15px;
-    margin-top: 20px;
-}
-.form-signin input[type="email"]{
-    margin-top: 7px;
+.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
+    background: #214a80;
+    outline: none;
 }
 
-.form-signin input[type="password"] {
-    margin-top:7px;
+.login-dark form .forgot {
+    display: block;
+    text-align: center;
+    font-size: 12px;
+    color: #6f7a85;
+    opacity: 0.9;
+    text-decoration: none;
 }
+
+.login-dark form .forgot:hover, .login-dark form .forgot:active {
+    opacity: 1;
+    text-decoration: none;
+}
+
+.login-dark form .btn-primary:active {
+    transform: translateY(1px);
+}
+
