--- a/css/estilos_content.css
+++ b/css/estilos_content.css
@@ -10,3 +10,10 @@
        transform: translate(0%, 30%);
     }
 }
+
+#body-home{ 
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
